--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<java.version>1.7</java.version>
 	</properties>
 
-	<dependencies>
+	<dependencies>		
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -64,10 +64,20 @@
 			<version>4.1.9.Final</version>
 		</dependency>
 		<dependency>
+ 			<groupId>org.hibernate</groupId>
+ 			<artifactId>hibernate-envers</artifactId>
+ 			<version>4.1.9.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.30</version>
 		</dependency>
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+    	</dependency>
 	</dependencies>	
 	<build>
 		<plugins>
