--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,14 @@
 		<start-class>com.pluralsight.EventTrackerApplication</start-class>
 		<java.version>1.7</java.version>
 	</properties>
-
+	
+	<repositories>
+		<repository>
+			<id>eits-repository</id>		
+			<url>http://maven.eits.com.br/content/repositories/releases</url>
+		</repository>
+	</repositories>
+ 	
 	<dependencies>		
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -78,6 +85,21 @@
     		<artifactId>jstl</artifactId>
     		<version>1.2</version>
     	</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>angularjs</artifactId>
+			<version>1.3.15</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.directwebremoting</groupId>
+    		<artifactId>dwr</artifactId>
+    		<version>3.0.2-RELEASE</version>
+  		</dependency>		
 	</dependencies>	
 	<build>
 		<plugins>
